# ML_101

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .python-version  .travis.yml  LICENSE  ML_Questions.md  Pipfile  README.md  SUMMARY.md  book.json  classical-machine-learning.md  classical_machine_learning.md  package-lock.json  package.json  pyproject.toml
NMS/: IOU.py  nms.py  nms_fast.py  nms_slow.py
PCA/: pca.py
anomaly-detection/: README.md  autoencoder_anomaly.md  dbscan.md
basics/: Confidence_Interval.md  Quantization.md  README.md  calculate_parameters_in_cnn.md  clustering.md  confidence_interval.md  how_to_prevent_overfitting.md  linear_algebra.md  optimization.md  quantization.md  weight_norm_and_layer_norm.md
classical/: classical-ml.md
classical-machine-learning/: classical-ml.md  unsupervised-learning.md
classical_ml/: README.md
computer-vision/: facenet.md  gan.md  object_detection_imbalance.md
css/: docsearch.css
cv/: Object_detection_imbalance.md  facenet.md  gan.md  object_detection_imbalance.md
docs/: Classical_Machine_learning.md  General.md  Neural_Networks.md
general/: README.md  calculate_parameters_in_cnn.md  clustering.md  imbalance_problem_in_object_detection.md  linear_algebra.md  optimization.md
kmeans/: kmeans.py  scikit-learn.py
loss/: binary_cross_entropy_loss.md  categorical_cross_entropy_loss.md  coral_loss.md  cross_entropy_loss.md  hinge_loss.md  l1-and-l2-loss.md
ml-fundamentals/: basics.md  calculate_parameters_in_cnn.md  clustering.md  confidence_interval.md  how_to_prevent_overfitting.md  (+4 more)
(+157 files in other folders)
