[tool.poetry]
name = "ml_101"
version = "0.1.0"
description = ""
authors = ["Ting Zhou <ztlevi.work@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.21.2"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
tqdm = "^4.62.1"
pdbpp = "^0.10.3"
torch = "^1.9.0"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
